--- a/NewsClient/src/main/res/layout/fn_item.xml
+++ b/NewsClient/src/main/res/layout/fn_item.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/fn_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_marginTop="10dp"
+        android:gravity="start"
+        android:text="@string/title"
+        android:maxLines="6"
+        android:lineSpacingMultiplier="1.1"
+        android:lineSpacingExtra="-2dp"
+        android:textColor="#333"
+        android:textSize="17sp" />
+
+    <TextView
+        android:id="@+id/fn_date"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_marginTop="12dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical|start"
+        android:text="@string/date"
+        android:textColor="@color/grey"
+        android:textSize="12sp"
+        android:paddingBottom="14dp"/>
 
 </LinearLayout>
