--- a/NewsClient/src/main/res/menu/comment.xml
+++ b/NewsClient/src/main/res/menu/comment.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.activity.NewsContentActivity">
+
+    <item
+        android:id="@+id/comment_num"
+        android:title=""
+        app:showAsAction="always"
+        android:panelFullBackground="@drawable/message_outline"/>
+
+    <item
+        android:id="@+id/share"
+        android:title=""
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_menu_share"/>
 
 </menu>
