--- a/NewsClient/src/main/res/menu/cp_menu.xml
+++ b/NewsClient/src/main/res/menu/cp_menu.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.activity.CommentsActivity">
+
+    <item
+        android:id="@+id/cp_page"
+        android:title=""
+        app:showAsAction="always" />
 
 </menu>
